--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,26 @@
   </div>
 
   <div id="result">Total Mortality/Euthanized: 0</div>
+  <br>
+  <br>
+
+  <label for="weather">Weather Condition:</label>
+  <input list="weatherOptions" id="weather" name="weather" placeholder="Select or type...">
+
+  <datalist id="weatherOptions">
+    <option value="Cloudy">
+    <option value="Cloudy/Windy">
+    <option value="Freezing Rain">
+    <option value="Mostly Cloudy">
+    <option value="Partly Cloudy">
+    <option value="Partly Sunny">
+    <option value="Rain">
+    <option value="Severe Storm">
+    <option value="Sleet">
+    <option value="Snow">
+    <option value="Sunny">
+    <option value="Winter Storm">
+  </datalist>
 
   <script>
     function increment(id) {
