add mortality comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,10 @@
 <label><input type="checkbox" name="mortalityReason" value="SO Starveout"> SO Starveout</label><br>
 <label><input type="checkbox" name="mortalityReason" value="I Injured"> I Injured</label>
 
+
+<p><strong>Mortality Comments:</strong></p>
+<textarea id="comments" name="comments" rows="2" cols="50" placeholder=""></textarea>
+
   <div class="spinner-container">
     <span class="spinner-label">Euthanized Indoor</span>
     <div class="spinner">
