--- a/templates/index.html
+++ b/templates/index.html
@@ -237,6 +237,15 @@
     </tbody>
   </table>
   <br>
+
+<p><strong>Yolk Color:</strong></p>
+<label><input type="radio" name="yolkColor" value="A"> A</label><br>
+<label><input type="radio" name="yolkColor" value="B"> B</label><br>
+<label><input type="radio" name="yolkColor" value="C"> C</label><br>
+<label><input type="radio" name="yolkColor" value="D"> D</label><br>
+<label><input type="radio" name="yolkColor" value="E"> E</label>
+<br>
+<br>
 <button onclick="clearPallets()">Submit Pallet Data</button>
 </div>
 
