stupid egs picked up and coolercommetns eror

--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
   <label><input type="checkbox" name="mortalityReason" value="I Injured"> I Injured</label>
 
   <p><strong>Mortality Comments:</strong></p>
-  <textarea id="comments" rows="2" placeholder="Enter any notes here..."></textarea>
+  <textarea id="mortalitycomments" rows="2" placeholder="Enter any notes here..."></textarea>
 
   <div class="spinner-container">
     <span class="spinner-label">Euthanized Indoor</span>
@@ -210,14 +210,15 @@
   <label><input type="radio" name="weather" value="Snow"> Snow</label><br>
   <label><input type="radio" name="weather" value="Sunny"> Sunny</label><br>
   <label><input type="radio" name="weather" value="Winter Storm"> Winter Storm</label>
-</div>
-
+<br>
 <br>
 <label for="eggspickedup">Eggs Picked Up</label>
 <input type="checkbox" id="eggspickedup" name="eggspickedup">
 
   <p><strong>CoolerLog Comments:</strong></p>
-  <textarea id="comments" rows="2" placeholder="Eggs Picked up/cooler log comments"></textarea>
+  <textarea id="coolerlogcomments" rows="2" placeholder="Eggs Picked up/cooler log comments"></textarea>
+
+</div>
 
 <!-- Pallet Entry Tab -->
 <div id="pallet" class="tabcontent">
