air and environment

--- a/templates/index.html
+++ b/templates/index.html
@@ -218,6 +218,50 @@
   <p><strong>CoolerLog Comments:</strong></p>
   <textarea id="coolerlogcomments" rows="2" placeholder="Eggs Picked up/cooler log comments"></textarea>
 
+
+<p><strong>Air Sensory:</strong></p>
+<label><input type="radio" name="airSensory" value="1"> 1</label>
+<label><input type="radio" name="airSensory" value="2"> 2</label>
+<label><input type="radio" name="airSensory" value="3"> 3</label>
+<label><input type="radio" name="airSensory" value="4"> 4</label>
+<label><input type="radio" name="airSensory" value="5"> 5</label>
+<br>
+
+<br>
+<label>Outside Drinkers Clean:</label>
+<label><input type="radio" name="drinkersClean" value="Yes"> Yes</label>
+<label><input type="radio" name="drinkersClean" value="No"> No</label>
+<br>
+<br>
+
+<label>Birds Found Under Slats:</label>
+<label><input type="radio" name="birdsUnderSlats" value="Yes"> Yes</label>
+<label><input type="radio" name="birdsUnderSlats" value="No"> No</label>
+<br>
+<br>
+
+<label>Safe Environment Indoors:</label>
+<label><input type="radio" name="safeIndoors" value="Yes"> Yes</label>
+<label><input type="radio" name="safeIndoors" value="No"> No</label>
+<br>
+<br>
+
+<label>Safe Environment Outdoors:</label>
+<label><input type="radio" name="safeOutdoors" value="Yes"> Yes</label>
+<label><input type="radio" name="safeOutdoors" value="No"> No</label>
+<br>
+<br>
+
+<label>Equipment Functioning:</label>
+<label><input type="radio" name="equipmentFunctioning" value="Yes"> Yes</label>
+<label><input type="radio" name="equipmentFunctioning" value="No"> No</label>
+<br>
+<br>
+
+<label>Predator Activity:</label>
+<label><input type="radio" name="predatorActivity" value="Yes"> Yes</label>
+<label><input type="radio" name="predatorActivity" value="No"> No</label>
+
 </div>
 
 <!-- Pallet Entry Tab -->
