--- a/templates/index.html
+++ b/templates/index.html
@@ -221,6 +221,12 @@
   <br>
   <br>
 
+  <p><strong>Added Supplements:</strong></p>
+  <textarea id="addedsupplements" rows="1" placeholder="..."></textarea>
+
+  <br>
+  <br>
+
 <label for="ration">Ration Delivered:</label>
 <select id="ration" name="ration">
   <option value="">-- Select Ration --</option>
