door and restricted reason

--- a/templates/index.html
+++ b/templates/index.html
@@ -227,6 +227,24 @@
   <br>
   <br>
 
+
+<label for="doorOpen">Door Open:</label>
+<input type="time" id="doorOpen" name="doorOpen" step="60">
+
+  <br>
+  <br>
+
+<label for="doorClosed">Door Closed:</label>
+<input type="time" id="doorClosed" name="doorClosed" step="60">
+
+  <br>
+  <br>
+
+  <p><strong>Birds Restricted Reason:</strong></p>
+  <textarea id="birdsrestrictedreason" rows="1" placeholder="..."></textarea>
+
+  <br>
+  <br>
 <label for="ration">Ration Delivered:</label>
 <select id="ration" name="ration">
   <option value="">-- Select Ration --</option>
