comments. should be everything we need

--- a/templates/index.html
+++ b/templates/index.html
@@ -471,6 +471,8 @@
       <button onclick="increment('depop#')">+</button>
     </div>
   </div>
+  <p><strong>Comments:</strong></p>
+  <textarea id="comments" rows="2" placeholder="Enter any notes here..."></textarea>
 
 </div>
 
