--- a/templates/index.html
+++ b/templates/index.html
@@ -340,7 +340,6 @@
   <option value="Phase 6-31">Phase 6-31</option>
 
   <!-- Developer & Prelay -->
-  <option value="Developer">Developer</option>
   <option value="PreLay">PreLay</option>
   <option value="Developer">Developer</option>
 
@@ -466,9 +465,9 @@
   <div class="spinner-container">
     <span class="spinner-label">Depop #</span>
     <div class="spinner">
-      <button onclick="decrement('depop#')">-</button>
-      <input type="number" id="depop#" value="0" min="0">
-      <button onclick="increment('depop#')">+</button>
+      <button onclick="decrement('depopnum')">-</button>
+      <input type="number" id="depopnum" value="0" min="0">
+      <button onclick="increment('depopnum')">+</button>
     </div>
   </div>
   <p><strong>Comments:</strong></p>
